Convert everything to TypeProxy.